styles.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
    text-decoration: none;
}


body {
    font-family: "Poppins", sans-serif;
}

.scroll_top {
    position: fixed;
    right: 15px;
    bottom: 15px;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    z-index: 999;
    background: #ff523b url("imgs/arrow-up-solid.svg") center no-repeat;
    background-size: 25px;
    box-shadow: 0 0.25rem 0.5rem 0 gray;
    opacity: 0.7;
  }
  .scroll_top:hover {
    opacity: 0.8;
  }
  .scroll_top:focus {
    opacity: 0.9;
  }
  .scroll_top:active {
    opacity: 1;
  }






/*NAV BAR*/


.wrap a {
    padding-top: 4px;
    margin: 0px;
}

.burger {
    width: 25px;
    margin-left: 20px;
    display: none;
}

#menu-toggle{
    display: none;
}

.cart img {
    width: 25px;
    margin: 0px 5px;
}

.logo img {
    width: 225px;
}

.nav_class {
   
    display: flex;
    align-items: center;
    padding: 20px;
}

.navbar {
    flex: 1;
    text-align: right;
}

.navbar ul {
    display: inline-block;
    list-style: none;
}

.navbar ul li {
    display: inline-block;
    margin: 20px;
}

.navbar ul li a {
    text-decoration: none;
    color: #444;
}








/*HOME PAGE*/

.first {
    background: radial-gradient(#ebc2c2,#f7bfbf);
    display: flex;
    flex-direction: column;
}
.first .front_wrap {
    margin-top: 70px;
}
.wrap {
    width: 100%;
    align-self: center;
    padding-left: 50px;
    padding-right: 50px;
}

.front_wrap {
    display: flex;
    width: 100%;
    padding-left: 100px;
    padding-right: 100px;
    max-width: 2000px;
    align-self: center;
    flex-wrap: wrap;
    flex-direction: row;
    flex-basis: 50%;
    
    justify-content: space-around;
    
}
.front  {
    display: flex;
    flex-direction: column;
    justify-content: center;
    min-width: 250px;
    text-align: left;
    flex-basis: 50%;
}

.front img {
    width: 540px;
    align-self: center;
    margin-left: 250px;
}

.front h1{
    margin-top: 30px;
    margin-bottom: 30px;
    line-height: 62px;
    font-size: 48px;
}
.front p {
    margin-bottom: 5px;
    color: #444;
    font-size: 20px;
}

.front a {
    max-width: 140px;
    text-decoration: none;
    color: white;
    background: #ff523b;
    padding: 8px 30px;
    margin: 25px 0px;
    border-radius: 30px;
    display: inline-block;
    transition: 0.3s ease;
}

.front a:hover{
    transform: scale(1.1);
}

.products {
    max-width: 1350px;
    padding: 0px 25px;
    margin: 70px auto;
}

.title, .testimon_wrap h2{
    text-align: center;
    margin: 0px auto 80px;
    line-height: 60px;
    text-decoration: underline;
    text-decoration-thickness: 3.5px;
    text-decoration-color: #ff523b;
    text-underline-offset: 8px;
    color: #444;
}

.line {
    
    justify-content: space-around;
    flex-wrap: wrap;
    display: flex;
    align-items: center;
    margin-bottom: 50px;
}



.item {
    cursor: pointer;
    transition: 0.6s;
    flex-basis: 25%;
    padding: 10px;
    min-width: 200px;
    margin-bottom: 45px;
}

.item:hover{
    transform:translateY(-5%)
}

.item h4 {
    color: #444;
}

.item p {
    font-size: 14px;
}

.item img {
    width: 100%;
}
.testimonial {
    padding-top: 100px;
}
.testimon_wrap {
    max-width: 1350px;
    padding: 0px 25px;
    margin: 70px auto;
}

.people {
    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.11);
    cursor: pointer;
    text-align: center;
    min-width: 200px;
    flex-basis: 30%;
    margin-bottom: 28px;
    padding: 30px 20px;
    transition: 0.45s
}

.people p {
    margin: 12px 0px;
    font-size: 17.5px;
    color: #444;
}

.people h3 {
    color: #444;
    font-size: 22px;
}

.people:hover{
    transform: translateY(-12px);
}

.personIMG {
    height: 50px;
    width: 50px;
    margin-top: 20px;
    border-radius: 50%;
}

.rating img {
    margin-top: 10px;
    width: 22px;
}

.quote {
    margin-top: 0px;
    width: 45px;
}











/*Product Page*/

.line-second{
    justify-content: space-between;
    font-weight: bold;
    font-size: 20px;
    margin: 100px auto 50px;
    text-align: center;
    line-height: 60px;
    text-decoration: underline;
    text-decoration-thickness: 3.5px;
    text-decoration-color: #ff523b;
    text-underline-offset: 8px;
    color: #444;
}

select{
    border: 2px solid #ff523b;
    padding: 5px;
    background-color: #f0efef;
}

select:focus{
    outline: none;
}

.pages-button{
    margin: 0px auto 80px;

}

.pages-button span {
    display: inline-block;
    border: 2px solid #ff523b;
    margin-left: 10px;
    width: 41px;
    height: 41px;
    cursor: pointer;
    text-align: center;
    line-height: 41px;
}

.pages-button span img {
    width: 15px;
    height: 15px;
}

.pages-button span:hover {
    background: #ff523b;
    color: #ffffff;
}





/*About Us*/
.heading{
    font-weight: bold;
    font-size: 20px;
    margin-top: 35px;
    margin-bottom: 8%;
    text-align: center;
    line-height: 60px;
    text-decoration: underline;
    text-decoration-thickness: 3.5px;
    text-decoration-color: #ff523b;
    text-underline-offset: 8px;
    color: #444;
}

.about_container{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 90%;
    margin: 65px auto 100px auto;
    max-width: 2000px;
}

.about_content{
    flex:1;
    width: 80%;
    margin: 0px 25px;
}
.about_content h2 {
    font-size: 38px;
    margin-bottom: 20px;
    color: #333;
}

.about_content a {
    display: inline-block;
    max-width: 150px;
    text-decoration: none;
    color: white;
    background: #ff523b;
    padding: 8px 30px;
    border-radius: 30px;
    cursor: pointer;
    transition: 0.3s ease;
}

.about_content a:hover {
    transform: scale(1.1);
}

.about_content p {
    font-size: 24px;
    line-height: 1.5;
    margin-bottom: 40px;
    color: #666;
}

.about_container_second {
    margin-top: 10%;
}
.about_content_second p, .about_content_third p {
    font-size: 20px;
}

.about-img{
    flex: 1;
    width: 600px;
    margin: auto;
    display: flex;
    justify-content: center;
}
.about-img img {
    width: 80%;
    height: auto;
    border-radius: 10px;
}








/*404 PAGE*/

.errorPage {
    display: flex;
    justify-content: center;
    margin: auto ;
    flex-wrap: wrap;
    text-align: center;
    height:100vh;
}
.error-content {
    text-align: center;
    margin: auto auto 35vh auto;
}

.error-content h1{
    color: #ff523b;
   font-size: 12vw;
   line-height: 1em;
  
}

.error-content h4{
    font-size: 2em;
    margin-bottom: 20px;
    margin-top: 10px;
    text-transform: uppercase;
    color: #333;
 }

 .error-content p{
    font-size: 1.2em;
    color: #0d0d0d;
 }

 .error-btn {
    margin: 25px 0px;
    display: inline-flex;

 }
.error-btn a {
    max-width: 170px;
    margin: 0 10px;
    text-decoration: none;
    color: white;
    background: #ff523b;
    padding: 8px 30px;
    border-radius: 30px;
    cursor: pointer;
    transition: 0.3s ease;
}



/*FOOTER*/
.foot {
    padding: 55px;
    background-color: #333;
    width: 100%;
    text-align: left;
   
    margin-top: 80px;
}

.foot .footLeft, .foot .footMid, .foot .footer-right {
    display: inline-block;
    vertical-align: top;
}


.footLeft {
    width: 44%;
}

.foot h3 {
    color: #fff;
    font-size: 36px;
    margin: 0;
}


.foot .footer-links {
    color: #fff;
    margin: 18px 0 10px 0px;
}

.foot .footer-links a {
    display: inline-block;
    color: #fff;
}

.foot .footer-company-name {
    color: #8f9296;
    font-size: 14px;
    margin: 0;
}

/* Footer Center */

.foot .footMid {
    width: 30%;
}

.foot .footMid img {
    height: 34px;
    margin: 10px 15px;
    vertical-align: middle;
}

.foot .footMid img {
    width: 22px;
}

.foot .footMid p {
    display: inline-block;
    color: #ffffff;
    vertical-align: middle;
    margin: 0;
}

.foot .footMid p span {
    display: block;
    font-weight: normal;
    font-size: 14px;
    line-height: 2;
}

.foot .footMid p a {
    color: #165ebb;
    
}


.foot .footer-right {
    width: 20%;
}

.foot .footer-company-about {
    line-height: 20px;
    color: #92999f;
    font-size: 13px;
    font-weight: normal;
    margin: 0;
}

.foot .footer-company-about span {
    display: block;
    color: #ffffff;
    font-size: 18px;
    font-weight: bold;
    margin-bottom: 20px;
}

.foot .footer-icons {
    margin-top: 25px;
}




@media (max-width: 1300px){ 
    /*About Us*/
    .heading h1 {
        font-size: 45px;
        margin-top: 30px;
    }
    .about {
        margin: 0px;
    }
   
    .about_content {
        width: 100%;
        margin: 35px 0px;
    }
    .about_container h2 {
        font-size: 25px;
    }
    .about_container p {
        font-size: 18px;
        margin-bottom: 20px;
    }
    .about_container a {
        font-size: 16px;
        padding: 8px 16px;
    }
    .about-img {
        width: 100%;
    }
    .about-img img {
        width: 100%;

    }
}




@media (max-width: 950px) {
    /*FOOTER*/
    .front_wrap {
        padding: 0px 50px;
    }

    .front img{
        margin-left: 100px;
    }

    .item{
        flex-basis: 50%;
    }

    .people {
        flex-basis: 45%;
        margin-top: 20px
    }

    .foot .footLeft, .foot .footMid, .foot .footer-right {
        display: flex;
        flex-direction: column;
        width: 100%;
        margin-bottom: 40px;
        text-align: center;
    }
    .foot .footMid i {
        margin-left: 0;
    }
    .foot {
        padding-bottom: 10px;
    }



     /*ABOUT US*/
    .heading h1 {
        font-size: 45px;
        margin-top: 30px;
    }
    .about {
        margin: 0px;
    }
    .about_container{
        width: 100%;
        flex-direction: column;
        margin: 100px 0px;
        padding: 0px 40px;
    }
    .about_content {
        width: 100%;
        margin: 35px 0px;
    }
    .about_container h2 {
        font-size: 25px;
    }
    .about_container p {
        font-size: 18px;
        margin-bottom: 20px;
    }
    .about_container a {
        font-size: 16px;
        padding: 8px 16px;
    }
    .about-img {
        width: 100%;
    }
    .about-img img {
        width: 100%;
    }
}




@media (min-width: 900.5px) {
    #menu-toggle:checked ~ .close ul {
        transform: scaleY(1)
    }
}


@media (max-width: 900px) {
    /* NAV BAR*/
    #menu-toggle:checked ~ .close ul {
        transform: scaleY(0)
    }
    .wrap {
        padding: 0px;
    }
    
    .navbar ul {
        text-align: center;
        top: 80px;
        right: 0;
        transition: 0.5;
        backdrop-filter: blur(20px);
        background: rgba(0,0,0,0.6);
        position: absolute;
        width: 100%;
        height: 17%;
        transform-origin: top;
    }


    .navbar ul li {
        display: block;
        margin-right: 50px;
        margin-top: 10px;
        margin-bottom: 10px;
    }

    .navbar ul li a{
        color: #fff;
    }
    .burger {
        width: 25px;
        height: 30px;
        background: transparent;
        border: none;
        display: block;
        cursor: pointer;
    }


    /*ERROR PAGE*/
    .error-content h1 {
        font-size: 120px;
    }
    .error-content h4 {
        
        font-size: 1.8em;
    }

    .error-content p {
        font-size: 1em;
    }
}

    


    

@media (max-width: 600px){
    .navbar ul {
        width: 100%;
        height: 17%;
    }
    .line {
        text-align: center;
    }
    .front_wrap {
        
        padding: 0px 50px;
        
    }
    .front {
        flex-basis: 100%;
        padding: 0px;
    }
    .front img {
        margin-left: 0px
    }
    .people,.item{
        flex-basis: 100%;
    }

}

